--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,14 @@ plugins {
 
 android {
     namespace 'com.fengsui.flights'
-    compileSdk 32
+    compileSdk 33
+
+    useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.fengsui.flights"
-        minSdk 24
-        targetSdk 32
+        minSdk 23
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -21,15 +23,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src\\main\\res'
+            }
+            assets {
+                srcDirs 'src\\main\\assets'
+            }
+        }
+    }
 }
 
 dependencies {
 
     implementation 'androidx.leanback:leanback:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation files('src\\main\\java\\com\\fengsui\\Libs\\jackson-databind-2.13.4.jar')
-    implementation files('src\\main\\java\\com\\fengsui\\Libs\\jackson-core-2.13.4.jar')
-    implementation files('src\\main\\java\\com\\fengsui\\Libs\\httpclient5-5.2.1.jar')
-    implementation files('src\\main\\java\\com\\fengsui\\Libs\\httpcore5-5.2.1.jar')
-
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
